finished experiment 5